<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <!-- 嵌套布局 -->
   <LinearLayout  android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="15dp"
       >
       <EditText android:id="@+id/username"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="text"
           android:hint="@string/hint_username"
           ></EditText>
   </LinearLayout>
   <LinearLayout  android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="15dp"
       >
       <EditText android:id="@+id/password"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:inputType="textPassword"
           android:hint="@string/hint_password"
           ></EditText>
   </LinearLayout>
   <LinearLayout android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="30dp"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="5dp"
       >
      <CheckBox android:id="@+id/saveInfoChk"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_marginRight="20dp"
       	    android:text="@string/saveInfoChk"
       	    ></CheckBox>
       	<CheckBox android:id="@+id/autoLoginChk"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/autoLoginChk"
       	    ></CheckBox>
   </LinearLayout>
   <RelativeLayout 
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="15dp"
       >
       <Button android:id="@+id/loginBtn"
           	android:layout_centerHorizontal="true"
           	android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	android:paddingTop="10sp"
           	android:paddingRight="80sp"
           	android:paddingBottom="10sp"
           	android:paddingLeft="80sp"
           	android:onClick="doLogin"
           	android:text="@string/loginBtn"
           ></Button>
   </RelativeLayout>
</LinearLayout>
