<?xml version="1.0" encoding="utf-8"?>
<org.testxxx.helloworld.PathView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mPathView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="#fcfcfc"
	    android:orientation="vertical" >
	        
	       <RelativeLayout 
	  			android:layout_width="fill_parent"
	  			android:layout_height="45dp"
	  			android:id="@+id/title" 
	  			android:background="@drawable/btn_title"
	  			android:gravity="center_vertical"  >  
	  			
	            
	      		<TextView
	        		android:layout_width="wrap_content" 
	        		android:layout_height="wrap_content" 
	        		android:text="乐友移动网管"
	        		android:layout_centerInParent="true"
	        		android:textSize="20sp"		
					android:textColor="#ffffff" />     
			</RelativeLayout>
	
	      	<LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="fill_parent"
	            android:gravity="center"
	            android:orientation="vertical"
	            android:background="@drawable/search_bar_bg" >
	      		
	      		<TextView android:id="@+id/groupmessage"
	      		    android:layout_width="fill_parent"
	      		    android:layout_height="wrap_content"
	      		    android:textColor="#7FFF00"
	      		    android:textSize="20.0sp"
	      		    ></TextView>
	      		
	      		<TextView android:id="@+id/userchktip"
	      		    android:layout_width="fill_parent"
	      		    android:layout_height="wrap_content"
	      		    android:textColor="#7FFF00"
	      		    android:textSize="20.0sp"
	      		    android:hint="@string/userchktip"
	      		    ></TextView>
	      		<CheckBox
	            android:id="@+id/suixin"
	       	    android:text="@string/sunxin"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:layout_marginLeft="60dp"
	            android:layout_marginBottom="8dp"
	            android:background="@null"
	            android:button="@null"
	            android:drawableLeft="@drawable/checkbox_bg1"
	            android:drawablePadding="4.0dip"
	            android:textColor="#000000"
	            android:textSize="12.0sp" />
	      		<CheckBox
	            android:id="@+id/dengbiao"
	       	    android:text="@string/dengbiao"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:layout_marginLeft="60dp"
	            android:layout_marginBottom="8dp"
	            android:background="@null"
	            android:button="@null"
	            android:drawableLeft="@drawable/checkbox_bg1"
	            android:drawablePadding="4.0dip"
	            android:textColor="#000000"
	            android:textSize="12.0sp" />
	      		<CheckBox
	            android:id="@+id/guokai"
	       	    android:text="@string/guokai"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="8dp"
	            android:layout_gravity="left"
	            android:layout_marginLeft="60dp"
	            android:background="@null"
	            android:button="@null"
	            android:drawableLeft="@drawable/checkbox_bg1"
	            android:drawablePadding="4.0dip"
	            android:textColor="#000000"
	            android:textSize="12.0sp" />
	      		<CheckBox
	            android:id="@+id/haitao"
	       	    android:text="@string/haitao"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:layout_marginLeft="60dp"
	            android:layout_marginBottom="20dp"
	            android:background="@null"
	            android:button="@null"
	            android:drawableLeft="@drawable/checkbox_bg1"
	            android:drawablePadding="4.0dip"
	            android:textColor="#000000"
	            android:textSize="12.0sp" />
	            <EditText
	                android:id="@+id/messagecnt"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="20dp"
	                android:hint="@string/hint_grpmsg" >             
	            </EditText>
	   			
	            <Button
			        android:id="@+id/push_msg"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="28.0dip"
			        android:layout_marginRight="28.0dip"
			        android:layout_marginTop="12.0dip"
			        android:background="@drawable/login_button_bg"
			        android:gravity="center"
			        android:paddingTop="5.0dip"
			        android:onClick="doLogin"
			        android:text="@string/push_msg"
			        android:textColor="#ff333333"
			        android:textSize="18.0sp" />
	            
	        </LinearLayout>
	 </LinearLayout>
</org.testxxx.helloworld.PathView>
