<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFF99"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="80.0dip"
        android:background="@drawable/login_logo2" />

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:background="@drawable/login_input"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="#00ffffff"
            android:hint="@string/hint_username"
            android:paddingLeft="12.0dip"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4" />

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="#00ffffff"
            android:gravity="center_vertical"
            android:hint="@string/hint_password"
            android:paddingLeft="12.0dip"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp" />
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="12.0dip"
        android:background="@drawable/login_button_bg"
        android:gravity="center"
        android:paddingTop="5.0dip"
        android:onClick="doLogin"
        android:text="@string/loginBtn"
        android:textColor="#ff333333"
        android:textSize="18.0sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:layout_marginLeft="30.0dip"
        android:layout_marginRight="30.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_weight="1" >

        <CheckBox
            android:id="@+id/saveInfoChk"
       	    android:text="@string/saveInfoChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:button="@null"
            android:drawableLeft="@drawable/checkbox_bg1"
            android:drawablePadding="4.0dip"
            android:textColor="#000000"
            android:textSize="12.0sp" />
        <CheckBox
            android:id="@+id/autoLoginChk"
       	    android:text="@string/autoLoginChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:button="@null"
            android:drawableLeft="@drawable/checkbox_bg1"
            android:drawablePadding="4.0dip"
            android:textColor="#000000"
            android:textSize="12.0sp" />
    </RelativeLayout>
</RelativeLayout>